--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,15 +15,17 @@ path       = "src/rust/src/lib.rs"
 napi        = { version = "3.3.0", features = ["async"] }
 napi-derive = "3.2.5"
 
-anyhow             = { version = "1.0.100" }
-serde              = { version = "1.0", features = ["derive"] }
-serde_json         = "1.0.145"
-serde_with         = "3.14.1"
-sha2               = "0.10"
+anyhow        = { version = "1.0.100" }
+ed25519-dalek = "2.2.0"
+hex           = "0.4.3"
+serde         = { version = "1.0", features = ["derive"] }
+serde_json    = "1.0.145"
+serde_with    = "3.14.1"
+sha2          = "0.10"
+
 soroban-env-common = { version = "23.0.1", features = ["std", "serde"] }
 soroban-env-host   = { version = "23.0.1", features = ["testutils"] }
 soroban-simulation = { version = "23.0.1", features = ["testutils"] }
-soroban-test-wasms = { git = "https://github.com/stellar/rs-soroban-env/" }
 
 
 [build-dependencies]
