--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "clean": "rm -rf dist *.node",
     "postinstall": "npm run build:ts"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@stellar/stellar-sdk": "14.1.0"
   },
   "devDependencies": {
@@ -94,7 +94,8 @@
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
-    "zod": "^4.0.17"
+    "zod": "^4.0.17",
+    "@stellar/stellar-sdk": "14.1.0"
   },
   "lint-staged": {
     "*.@(js|ts|tsx)": [
@@ -108,7 +109,7 @@
     ]
   },
   "prettier": {
-    "printWidth": 120,
+    "printWidth": 100,
     "semi": true,
     "trailingComma": "all",
     "singleQuote": true,
