--- a/package.json
+++ b/package.json
@@ -70,12 +70,15 @@
     "clean": "rm -rf dist *.node",
     "postinstall": "npm run build:ts"
   },
+  "peerDependencies": {
+    "@stellar/stellar-sdk": "14.1.0"
+  },
   "devDependencies": {
     "@emnapi/core": "^1.4.5",
     "@emnapi/runtime": "^1.4.5",
-    "@mysten/sui": "^1.31.0",
     "@napi-rs/cli": "^3.0.3",
     "@oxc-node/core": "^0.0.32",
+    "@stellar/stellar-sdk": "14.1.0",
     "@taplo/cli": "^0.7.0",
     "@tybys/wasm-util": "^0.10.0",
     "@types/jest": "^30.0.0",
@@ -106,7 +109,7 @@
     ]
   },
   "prettier": {
-    "printWidth": 120,
+    "printWidth": 100,
     "semi": true,
     "trailingComma": "all",
     "singleQuote": true,
