--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,3 @@
-
 [package]
 authors = ["RedStone Team <dev@redstone.finance>"]
 edition = "2021"
@@ -13,15 +12,21 @@ name       = "mars_rover"
 path       = "src/rust/src/lib.rs"
 
 [dependencies]
-napi        = { version = "3.0.0", features = ["async"] }
-napi-derive = "3.0.0"
+napi        = { version = "3.3.0", features = ["async"] }
+napi-derive = "3.2.5"
 
-anyhow     = "1.0"
-base64     = "0.21"
-bcs        = "0.1"
-flate2     = { version = "1.1.2" }
-serde      = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+anyhow        = { version = "1.0.100" }
+ed25519-dalek = "2.2.0"
+hex           = "0.4.3"
+serde         = { version = "1.0", features = ["derive"] }
+serde_json    = "1.0.145"
+serde_with    = "3.14.1"
+sha2          = "0.10"
+
+soroban-env-common = { version = "23.0.1", features = ["std", "serde"] }
+soroban-env-host   = { version = "23.0.1", features = ["testutils"] }
+soroban-simulation = { version = "23.0.1", features = ["testutils"] }
+
 
 [build-dependencies]
 napi-build = "2"
